apps/athenaeum/service-default-athenaeum-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: athenaeum
    component: backend
  name: athenaeum-backend
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: athenaeum
    component: backend
  sessionAffinity: None
  type: ClusterIP
