apps/athenaeum/service-default-athenaeum-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: athenaeum
    component: frontend
  name: athenaeum-frontend
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: athenaeum
    component: frontend
    managed-by: terraform
  sessionAffinity: None
  type: ClusterIP
