apps/athenaeum/service-default-athenaeum-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: athenaeum
    component: redis
  name: athenaeum-redis
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: athenaeum
    component: redis
  sessionAffinity: None
  type: ClusterIP
